<package format="2">
  <name>lidar_localizer</name>
  <version>0.0.0</version>
  <description>lidar_localization_package</description>

  <maintainer email="korkhg15@g.cbnu.ac.kr">hogeol</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>  
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
